fix horizontal scrollbar

--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ body {
     align-items: center;
     flex-direction: column;
     background-color: var(--c1);
+    overflow-x: hidden;
 }
 
 nav {
